--- a/ToDoList_C#.csproj
+++ b/ToDoList_C#.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3124.44" />
     <PackageReference Include="Newtonsoft.json" Version="13.0.3" />
   </ItemGroup>
 
